tests/ui/rfcs/rfc-3348-c-string-literals/no-nuls.stderr
error: null characters in C string literals are not supported
  --> $DIR/no-nuls.rs:14:7
   |
LL |     c"\0";
   |       ^^

error: null characters in C string literals are not supported
  --> $DIR/no-nuls.rs:15:7
   |
LL |     c"\u{00}";
   |       ^^^^^^

error: null characters in C string literals are not supported
  --> $DIR/no-nuls.rs:16:7
   |
LL |     c"␀";
   |       ^

error: null characters in C string literals are not supported
  --> $DIR/no-nuls.rs:17:7
   |
LL |     c"\x00";
   |       ^^^^

error: null characters in C string literals are not supported
  --> $DIR/no-nuls.rs:18:8
   |
LL |     cr"␀";
   |        ^

error: null characters in C string literals are not supported
  --> $DIR/no-nuls.rs:28:7
   |
LL |     c"\0";
   |       ^^

error: null characters in C string literals are not supported
  --> $DIR/no-nuls.rs:29:7
   |
LL |     c"\u{00}";
   |       ^^^^^^

error: null characters in C string literals are not supported
  --> $DIR/no-nuls.rs:30:7
   |
LL |     c"␀";
   |       ^

error: null characters in C string literals are not supported
  --> $DIR/no-nuls.rs:31:7
   |
LL |     c"\x00";
   |       ^^^^

error: null characters in C string literals are not supported
  --> $DIR/no-nuls.rs:32:8
   |
LL |     cr"␀";
   |        ^

error: null characters in C string literals are not supported
  --> $DIR/no-nuls.rs:37:14
   |
LL |     empty!(c"\0");
   |              ^^

error: null characters in C string literals are not supported
  --> $DIR/no-nuls.rs:38:14
   |
LL |     empty!(c"\u{00}");
   |              ^^^^^^

error: null characters in C string literals are not supported
  --> $DIR/no-nuls.rs:39:14
   |
LL |     empty!(c"␀");
   |              ^

error: null characters in C string literals are not supported
  --> $DIR/no-nuls.rs:40:14
   |
LL |     empty!(c"\x00");
   |              ^^^^

error: null characters in C string literals are not supported
  --> $DIR/no-nuls.rs:41:15
   |
LL |     empty!(cr"␀");
   |               ^

error: aborting due to 15 previous errors

